<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".FormularioProdutos">

    <!-- CARD STATUSBAR -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shapes_formulario"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:src="@mipmap/ic_launcher" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtAppName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <!-- CARD DO PRODUTO -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shapes_formulario"
        android:backgroundTint="@color/colorCardButton"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/txtNomeProduto"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editText_NomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/shapes_formulario"
                android:backgroundTint="@color/colorCard"
                android:hint="@string/nome_do_produto"
                android:inputType="textCapWords"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/shapes_formulario"
                android:backgroundTint="@color/colorCard"
                android:hint="@string/descricao_do_produto"
                android:inputType="textCapWords"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Quantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/shapes_formulario"
                android:backgroundTint="@color/colorCard"
                android:hint="@string/quantidade"
                android:inputType="number"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_poliform"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@drawable/shapes_formulario"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/modificar" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>